Stop jumping to top on rider name click

--- a/css/srt.css
+++ b/css/srt.css
@@ -269,3 +269,9 @@ body {
 .badge {
   vertical-align: middle;
 }
+
+.popover-link {
+  cursor:pointer;
+  color:blue;
+  text-decoration:underline;
+}
